--- a/centralbank/lib/centralbank/views/index.erb
+++ b/centralbank/lib/centralbank/views/index.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Central Bank Node</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.unix.com/block/style.css">
   </head>
   <body>
 
